welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:9: error: value or is not a member of Boolean
  if (tea<5 or candy <5) {
            ^