welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
  var x=1
  if (tea>=2*candy) {
    x=2
  }
  if (tea<=2*candy) {
    x=2
  }
  if (tea<5 or candy <5) {
    x=0
  }
  x
}